<resources>
    <string name="app_name">Phone List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="detail">Detail</string>
    <string name="name">Name : </string>
    <string name="family">Last Name : </string>
    <string name="phoneNumber">Phone Number : </string>
    <string name="address">Address : </string>
    <string name="sampleAddress">test,test,test,test</string>
    <string name="hint_name">Enter Your Name…</string>
    <string name="hint_family">Enter Your Last Name…</string>
    <string name="hint_phone_number">Should Be 11 Digits</string>
    <string name="hint_address">Enter Your Address</string>
    <string name="delete">Delete</string>
    <string name="success_dialogue">Updated Successfully</string>
    <string name="error_dialogue">Please Fill All Field Correctly</string>
    <string name="save_dialogue">Saved Successfully</string>
    <string name="delete_dialogue">Deleted Successfully</string>
</resources>