<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.hopeco.phonelist.ui.ListFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.hopeco.phonelist.ui.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.hopeco.phonelist.ui.UpdateFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.hopeco.phonelist.ui.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_detailFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
</navigation>