<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linearRecycler"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_item_shape"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/family"
            android:textSize="20sp" />
        <View
            android:background="@color/dark_blue"
            android:layout_width="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/phoneNumber"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:layout_margin="5dp"
        android:background="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/txtAddress"
        android:text="@string/sampleAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>


</LinearLayout>